# PA_ML_3IABD

./: Notebook___CAS_DE_TESTS.ipynb  PA_ML_MODEL.ipynb  PA_ML_MODEL_CPP.ipynb  README.md
.ipynb_checkpoints/: Notebook___CAS_DE_TESTS-checkpoint.ipynb  PA_ML_MODEL-checkpoint.ipynb  PA_ML_MODEL_CPP-checkpoint.ipynb
CPPDLLForPython/: CMakeLists.txt  library.cpp  library.h  library_classification.cpp  test  test.cpp
CPPDLLForPython/Eigen/src/Core/: CwiseNullaryOp.h  DenseBase.h  GlobalFunctions.h  MathFunctions.h  Random.h
CPPDLLForPython/Eigen/src/Core/functors/: NullaryFunctors.h
CPPDLLForPython/Eigen/src/Core/util/: Constants.h
CPPDLLForPython/Eigen/src/Geometry/: AlignedBox.h  Quaternion.h
CPPDLLForPython/Eigen/src/SparseCore/: SparseMatrix.h
CPPDLLForPython/Eigen/src/SparseQR/: SparseQR.h
CallNativePython/: main.py
dataset/: téléchargé (1).jfif  téléchargé (2).jfif  téléchargé (3).jfif
eigen/blas/testing/: cblat2.f  cblat3.f  dblat2.f  dblat3.f  sblat2.f  sblat3.f  zblat2.f  zblat3.f
eigen/doc/: AsciiQuickReference.txt  CustomizingEigen_NullaryExpr.dox  QuickStartGuide.dox  TopicMultithreading.dox  TutorialAdvancedInitialization.dox  TutorialSparse.dox
eigen/unsupported/Eigen/CXX11/src/Tensor/: README.md
implémentation/: api.py
implémentation/templates/: home.html  result.html
predict_api/: main.py  pyproject.toml  saved_model.pkl
